# PARSERF

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt
cmake/: FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake
include/: JsonE.hpp  json.hpp
scripts/: coverage.sh
sources/: json.cpp  main.cpp
tests/: mainT.cpp  test.cpp  testparsefile.json
